# ytDownload

./: .gitignore  README.md  pyproject.toml
ytDownload/: main.py
ytMediaDownload.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ytdownload.egg-info/: PKG-INFO  SOURCES.txt
